<resources>
    <string name="app_name">Cravyn</string>
    <string name="login_header_title_text">Hungry? Come in!</string>
    <string name="enter_email_hint_text">Enter email</string>
    <string name="enter_password_hint_text">Enter password</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="login_button_text">Let\'s Eat!</string>
    <string name="new_here_text">New here?</string>
    <string name="sign_up_text">Join the feast!</string>
    <string name="sign_up_button_text">Grab a seat!</string>
    <string name="confirm_password_hint_text">Confirm password</string>
    <string name="choose_date_of_birth_hint_text">Choose date of birth</string>
    <string name="enter_name_hint_text">Enter name</string>
    <string name="enter_phone_hint_text">Enter phone</string>
    <string name="current_step_count">Step %d of %d</string>
    <string name="forgot_password_step_1_header_text">Enter your email address</string>
    <string name="forgot_password_step_1_description_text">Please provide the email linked to your account, and we’ll send you a one-time password (OTP) to reset your password.</string>
    <string name="forgot_password_step_1_button_text">Send OTP</string>
    <string name="forgot_password_step_2_header_text">Verify your OTP</string>
    <string name="forgot_password_step_2_description_text">Please enter the 4-digit OTP we sent to your email.</string>
    <string name="forgot_password_step_2_button_text">Submit OTP</string>
    <string name="forgot_password_step_3_header_text">Enter Your New Password</string>
    <string name="forgot_password_step_3_description_text">Please enter and confirm your new password below.</string>
    <string name="forgot_password_step_3_button_text">Update Password</string>
    <string name="forgot_password_toolbar_title">Forgot Password</string>
    <string name="formatted_date">%1$d/%2$d/%3$d</string>
    <string name="search_hint_text">Search for your cravings here</string>
    <string name="offer_heading_text">GET READY FOR\nEXCITING OFFERS</string>
    <string name="offer_sub_heading_Text">CRAZY DEALS IN YOUR WAY</string>
    <string name="offer_action_button_text">Order Now</string>
    <string name="recommended_food_header_text">What\'s on your mind?</string>
    <string name="join_plus_text">Join PLUS</string>
    <string name="recommended_restaurant_header_text">Recommended Restaurant</string>
    <string name="item_recommended_food_name_dummy_text">Biryani</string>
    <string name="item_recommended_restaurant_discount_percent_dummy_text">20% Off</string>
    <string name="item_recommended_restaurant_discount_max_dummy_text">Up to ₹100</string>
    <string name="item_recommended_restaurant_best_in_item_name_dummy_text">Best in Biryani</string>
    <string name="item_recommended_restaurant_name_dummy_text">Arsalan</string>
    <string name="item_recommended_restaurant_rating_delivery_time_dummy_text">4.4 (10K+) • 15–20 min</string>
    <string name="item_recommended_restaurant_address_dummy_text">Salt Lake | 2.5 km</string>
    <string name="home_recommended_restaurant_list_filter_button_text">Filter</string>
    <string name="home_recommended_restaurant_list_sort_by_button_text">Sort by</string>
    <string name="home_recommended_restaurant_list_plus_filter_button_text">PLUS Extra off</string>
    <string name="search_menu_hint_text">Search menu</string>
    <string name="filter_menu_veg_only_button_text">Veg Only</string>
    <string name="filter_menu_top_ratings_button_text">Ratings 4.0+</string>
    <string name="item_restaurant_menu_dummy_description_text">Succulent mutton pieces marinated in aromatic spices, layered with saffron-infused basmati rice and caramelized onions. A rich, flavorful feast that’s slow-cooked to perfection and served with refreshing raita.</string>
    <string name="item_restaurant_menu_dummy_rating_text">4.4 (370)</string>
    <string name="item_restaurant_menu_dummy_price_text">₹375</string>
    <string name="item_restaurant_menu_dummy_food_name_text">Mutton Biryani</string>
    <string name="item_restaurant_menu_add_to_cart_button_text">Add</string>
    <string name="restaurant_best_in_item_name_dummy_text">Best in Biryani</string>
    <string name="restaurant_rating_dummy_text">4.5</string>
    <string name="restaurant_rating_count_dummy_text">9.5K+ ratings</string>
    <string name="restaurant_delivery_estimation_dummy_text">20–25 min • 2.7 km</string>
    <string name="searched_foods_header_text">Foods</string>
    <string name="searched_restaurants_header_text">Restaurants</string>
    <string name="restaurant_delivery_estimation_text">%1$d-%2$d min • %3$s km</string>
    <string name="restaurant_rating_count_text">%1$d ratings</string>
    <string name="restaurant_menu_item_price_text">₹%1$s</string>
    <string name="restaurant_menu_item_rating_text">%1$s (%2$d)</string>
    <string name="cart_toolbar_title">My Cart</string>
    <string name="item_cart_dummy_food_name_text">Mutton Biryani</string>
    <string name="item_cart_dummy_restaurant_name_text">Arsalan</string>
    <string name="item_cart_original_price_dummy_text">₹400</string>
    <string name="item_cart_final_price_dummy_text">₹350</string>
    <string name="item_cart_minus_button_text">-</string>
    <string name="item_cart_quantity_dummy_text">1</string>
    <string name="item_cart_plus_button_text">+</string>
    <string name="search_food_item_price_text">₹%1$s</string>
    <string name="search_food_item_rating_text">%1$s (%2$d)</string>
    <string name="item_restaurant_discount_percent_text">%1$s%% OFF</string>
    <string name="item_restaurant_discount_max_text">Up to ₹%1$s</string>
    <string name="item_restaurant_rating_delivery_time_text">%1$s (%2$d) • %3$d-%4$d min</string>
    <string name="item_restaurant_address_text">%1$s | %2$s km</string>
    <string name="item_restaurant_rating_text">%1$s (%2$d)</string>
    <string name="formatted_price_text">₹%1$s</string>
    <string name="formatted_discount_text">- ₹%1$s</string>
    <string name="item_cart_final_price_text">₹%1$f</string>
    <string name="cart_summary_header_text">Cart Summary</string>
    <string name="total_price_label_text">Total Price</string>
    <string name="total_price_dummy_text">₹800.00</string>
    <string name="total_discount_label_text">Total Discount</string>
    <string name="delivery_charge_label_text">Delivery Charge</string>
    <string name="platform_charge_label_text">Platform Charge</string>
    <string name="final_price_label_text">Final Price</string>
    <string name="final_price_dummy_text">₹735.00</string>
    <string name="place_order_button_text">Place Order</string>
    <string name="platform_charge_dummy_text">₹5.00</string>
    <string name="delivery_charge_dummy_text">₹30.00</string>
    <string name="total_discount_dummy_text">- ₹100.00</string>
    <string name="selected_address_text">Selected Address</string>
    <string name="selected_address_dummy_text">JD Block, Sector 3, Bidhannagar, Kolkata, West Bengal 700106</string>
    <string name="add_new_address_button_text">Add new address</string>
    <string name="saved_addresses_header_text">Saved Addresses</string>
    <string name="search_address_hint_text">Type your address here</string>
    <string name="save_button_text">Save</string>
    <string name="set_as_default_button_text">Set as default</string>
    <string name="empty_cart_text">Oops! Your cart is empty.</string>
    <string name="specifications_header_text">Specifications</string>
    <string name="specifications_input_hint_text">Enter any special request for the restaurant</string>
    <string name="delivery_address_header_text">Delivery Address</string>
    <string name="question_label_text">Question</string>
    <string name="question_dummy_text">Can I order from multiple restaurants?</string>
    <string name="answer_dummy_text">One food craving at a time, please! But hey, if you really want that sushi-taco-pizza-burger combo, we’re here to make it happen. Just brace yourself for the wait… 🚴‍♀️🍣🌮🍕</string>
    <string name="answer_label_text">Answer</string>
    <string name="answered_by_dummy_text">Answered by: Team Cravyn</string>
    <string name="query_answer_not_available_text">Not Available.</string>
    <string name="answered_by_text">Answered by: %1$s</string>
    <string name="question_input_hint_text">Enter your question</string>
    <string name="update_profile_button_text">Update profile</string>
    <string name="order_history_button_text">Order History</string>
    <string name="logout_button_text">Logout</string>
    <string name="plus_member_text">Plus Member</string>
    <string name="profile_name_text">Name</string>
    <string name="item_home_text">Home</string>
    <string name="item_search_text">Search</string>
    <string name="item_query_text">Queries</string>
    <string name="item_cart_text">Cart</string>
    <string name="order_time_dummy_text">Dec 31, 2024 10:33AM</string>
    <string name="order_no_dummy_text">Order No: 653602</string>
    <string name="order_final_price_dummy_text">₹816.37</string>
    <string name="status_label_text">Status:</string>
    <string name="status_dummy_text">Packed</string>
    <string name="cancel_order_button_text">Cancel</string>
    <string name="order_item_count_dummy_text">x2</string>
    <string name="order_item_count_text">x%1$d</string>
    <string name="order_no_text">Order No: %1$s</string>
    <string name="delivery_partner_label_text">Delivery Partner:</string>
    <string name="delivery_partner_name_dummy_text">Delivery Partner Name</string>
</resources>
