<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    app:cardCornerRadius="12dp"
    app:strokeColor="?attr/colorPrimary"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/question_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/question_label_text"
            android:textColor="@color/shared_text_color"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/question_dummy_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/answer_label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/answer_label_text"
            android:textColor="@color/shared_text_color"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/answer_dummy_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/answered_by_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/answered_by_dummy_text" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
