<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.auth.forgotpassword.NewPasswordFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header_text"
        style="@style/HeaderStyle"
        android:text="@string/forgot_password_step_3_header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description_text"
        style="@style/ForgotPasswordDescriptionTextStyle"
        android:text="@string/forgot_password_step_3_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_text_input_layout"
        style="@style/OutlinedTextInputLayoutStyle"
        android:hint="@string/enter_password_hint_text"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText style="@style/OutlinedTextInputEditTextStyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_new_password_text_input_layout"
        style="@style/OutlinedTextInputLayoutStyle"
        android:hint="@string/confirm_password_hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_text_input_layout"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText style="@style/OutlinedTextInputEditTextStyle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_password_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/forgot_password_shared_button_margin_top"
        android:text="@string/forgot_password_step_3_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_new_password_text_input_layout" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loading_bar"
        style="@style/LoadingBarCardStyle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/update_password_button"
        app:layout_constraintEnd_toEndOf="@id/update_password_button"
        app:layout_constraintStart_toStartOf="@id/update_password_button"
        app:layout_constraintTop_toTopOf="@id/update_password_button">

        <com.google.android.material.progressindicator.CircularProgressIndicator style="@style/CircularProgressIndicatorStyle" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
