<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.auth.forgotpassword.OtpVerificationFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header_text"
        style="@style/HeaderStyle"
        android:text="@string/forgot_password_step_2_header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description_text"
        style="@style/ForgotPasswordDescriptionTextStyle"
        android:text="@string/forgot_password_step_2_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text" />

    <com.cravyn.app.widget.OtpEditText
        android:id="@+id/otp_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/otp_edit_text_margin_top"
        android:layout_marginHorizontal="@dimen/shared_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_otp_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/forgot_password_shared_button_margin_top"
        android:text="@string/forgot_password_step_2_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_edit_text" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loading_bar"
        style="@style/LoadingBarCardStyle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/submit_otp_button"
        app:layout_constraintEnd_toEndOf="@id/submit_otp_button"
        app:layout_constraintStart_toStartOf="@id/submit_otp_button"
        app:layout_constraintTop_toTopOf="@id/submit_otp_button">

        <com.google.android.material.progressindicator.CircularProgressIndicator style="@style/CircularProgressIndicatorStyle" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
